// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-3150098708"
>
  <h1>
    Test title
  </h1>
  <h2>
    Test subtitle
  </h2>
</section>
`;

exports[`HeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-3150098708"
>
  <h1>
    Test title
  </h1>
  
</section>
`;
